commit out the login and the sign up page

--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
 https://note-app-backend-4.onrender.com
+VITE_GOOGLE_CLIENT_ID=558798419451-5qpak6su2nm1a83usk10e4834ha0a904.apps.googleusercontent.com
+VITE_APPLE_CLIENT_ID=YOUR_APPLE_CLIENT_ID
