--- a/package.json
+++ b/package.json
@@ -22,13 +22,17 @@
 
   "dependencies": {
 
+    "@react-oauth/google": "^0.12.2",
+
     "react": "^19.1.0",
+
+    "react-apple-signin-auth": "^1.1.2",
 
     "react-dom": "^19.1.0",
 
     "react-icons": "^5.5.0",
 
-    "react-router-dom": "^7.6.2"
+    "react-router-dom": "^7.6.3"
 
   },
 
